<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/border">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_image"
            android:textColor="@color/textColorOn"
            android:textSize="@dimen/text_size_10pt"
            android:layout_marginRight="@dimen/size_5dp"/>

        <ImageView
            android:id="@+id/imgDeviceDialog"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:background="@drawable/border"
            android:src="@drawable/light" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="@dimen/size_250dp"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/size_5dp">

        <EditText
            android:id="@+id/edtDvNameD"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/edit"
            android:textSize="@dimen/text_size_10pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_10pt"
            android:layout_gravity="left"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="@dimen/size_5dp"
            >
            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/textColorOn"
                android:textSize="@dimen/text_size_10pt"
                android:hint="@string/content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/size_5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSetTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_blue"
                android:text="@string/set_time"
                android:textSize="@dimen/text_size_5pt"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/btnSelectTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:background="@drawable/border_blue"
                android:text="@string/select_time"
                android:textSize="@dimen/text_size_5pt"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/size_5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_blue"
                android:text="@string/save"
                android:textSize="@dimen/text_size_5pt"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:background="@drawable/border_blue"
                android:text="@string/cancel"
                android:textSize="@dimen/text_size_5pt"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>