<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingsActivity"
    android:layout_marginLeft="@dimen/size_5dp"
    android:layout_marginRight="@dimen/size_5dp"
    android:orientation="vertical"
    android:background="@color/colorWhite">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="@dimen/size_10dp"
        android:background="@drawable/border">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/border_none"
            android:id="@+id/btnEditCodeNumber"
            android:text="@string/switch_device"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_size_13pt"
            android:gravity="center"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/imgStatusCodeNumber"
            android:src="@drawable/ic_online"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="@dimen/size_10dp"
        android:background="@drawable/border">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/btnConnectLocal"
            android:background="@drawable/border_none"
            android:text="@string/connect_local"
            android:textSize="@dimen/text_size_13pt"
            android:textColor="@color/colorBlue"
            android:gravity="center"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/imgStatusConnectLocal"
            android:src="@drawable/ic_online"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="@dimen/size_10dp"
        android:background="@drawable/border">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/btnConnectOnline"
            android:background="@drawable/border_none"
            android:text="@string/connect_online"
            android:textSize="@dimen/text_size_13pt"
            android:textColor="@color/colorBlue"
            android:gravity="center"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/imgStatusConnectOnline"
            android:src="@drawable/ic_online"/>

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:weightSum="3"-->
<!--        android:layout_marginTop="@dimen/size_10dp"-->
<!--        android:orientation="horizontal">-->

<!--        <Button-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="2"-->
<!--            android:id="@+id/btnReloadDevice"-->
<!--            android:background="@drawable/border"-->
<!--            android:text="@string/reload_device"-->
<!--            android:textSize="@dimen/text_size_13pt"-->
<!--            android:textColor="@color/colorBlack"-->
<!--            android:gravity="center"/>-->

<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_weight="1"-->
<!--            android:id="@+id/tvDeviceNumber"-->
<!--            android:textSize="@dimen/text_size_13pt"-->
<!--            android:textColor="@color/colorBlack"/>-->

<!--    </LinearLayout>-->


</LinearLayout>